--- a/DairyManagement/Views/Login/Index.cshtml
+++ b/DairyManagement/Views/Login/Index.cshtml
@@ -10,14 +10,14 @@
     @Html.AntiForgeryToken()
     <h1 class="h3 mb-3 font-weight-normal">કૃપા કરીને સાઇન ઇન કરો</h1>
 
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    @Html.ValidationSummary(false, "", new { @class = "text-danger" })
     @Html.LabelFor(model => model.Username, htmlAttributes: new { @class = "sr-only" })
     @Html.EditorFor(model => model.Username, new { htmlAttributes = new { @class = "form-control", @title = "વપરાશકર્તા નામ", @placeholder = "વપરાશકર્તા નામ" } })
     @Html.ValidationMessageFor(model => model.Username, "", new { @class = "text-danger" })
 
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     @Html.LabelFor(model => model.Password, htmlAttributes: new { @class = "sr-only" })
-    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @title = "પા", @placeholder = "પાસવર્ડ", @type="password" } })
+    @Html.EditorFor(model => model.Password, new { htmlAttributes = new { @class = "form-control", @title = "પા", @placeholder = "પાસવર્ડ", @type = "password" } })
     @Html.ValidationMessageFor(model => model.Password, "", new { @class = "text-danger" })
 
     <input type="submit" value="Sign in" class="btn btn-lg btn-primary btn-block" />
