--- a/DairyManagement/Views/Shared/_Layout.cshtml
+++ b/DairyManagement/Views/Shared/_Layout.cshtml
@@ -9,6 +9,7 @@
     @Styles.Render("~/Content/bootstrapdatatablecss")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" type="text/css" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+    <link rel="stylesheet" type="text/css" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-datepicker/1.9.0/css/bootstrap-datepicker.min.css" />
 </head>
 <body>
     <div class="navbar navbar-inverse navbar-fixed-top">
@@ -54,6 +55,7 @@
     @Scripts.Render("~/bundles/jquery")
     @Scripts.Render("~/bundles/datatable")
     @Scripts.Render("~/bundles/bootstrap")
+    @*@Scripts.Render("~/bundles/jquery-ui")*@
     @RenderSection("scripts", required: false)
 
     <script>
