--- a/DairyManagement/Views/EmployeeToCustomerMilk/Create.cshtml
+++ b/DairyManagement/Views/EmployeeToCustomerMilk/Create.cshtml
@@ -5,58 +5,71 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
+<link href="~/Content/jquery.datetimepicker.css" rel="stylesheet" />
+
 @using (Html.BeginForm())
 {
     @Html.AntiForgeryToken()
 
-<div class="form-horizontal">
-    <h4>Milk Selling Entry</h4>
-    <hr />
-    @using (Html.BeginForm("Create", "EmployeeToCustomerMilk", FormMethod.Post, new { id = "employeeToCustomerMilkForm" }))
-    {
-        @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-        <div class="form-group">
-            @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3">
-                @Html.DropDownListFor(model => model.EmployeeId, Model.EmployeeInfoList,
-  new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
-            </div>
-        </div>
+    <div class="form-horizontal">
+        <h4>Milk Selling Entry</h4>
+        <hr />
+        @using (Html.BeginForm("Create", "EmployeeToCustomerMilk", FormMethod.Post, new { id = "employeeToCustomerMilkForm" }))
+        {
+            @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+            @Html.HiddenFor(model => model.Id)
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.CustomerId, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3">
-                @Html.DropDownListFor(model => model.CustomerId, Model.CustomerInfoList,
-  new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.Date, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.Date, new { htmlAttributes = new { @class = "form-control datetimepicker" } })
+                    @Html.ValidationMessageFor(model => model.Date, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MilkType, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3">
-                @Html.DropDownListFor(model => model.MilkType, Enum.GetNames(typeof(DairyManagement.Models.Enums.CustomerMilkType)).Select(e => new SelectListItem() { Text = e }),
-  new { @class = "form-control" })
-                @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.EmployeeId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.DropDownListFor(model => model.EmployeeId, Model.EmployeeInfoList,
+      new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.EmployeeId, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            @Html.LabelFor(model => model.MilkGiven, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-3">
-                @Html.EditorFor(model => model.MilkGiven, new { htmlAttributes = new { @class = "form-control"} })
-                @Html.ValidationMessageFor(model => model.MilkGiven, "", new { @class = "text-danger" })
+            <div class="form-group">
+                @Html.LabelFor(model => model.CustomerId, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.DropDownListFor(model => model.CustomerId, Model.CustomerInfoList,
+      new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
 
-        <div class="form-group">
-            <div class="col-md-offset-2 col-md-10">
-                <input type="submit" value="Create" class="btn btn-default" />
+            <div class="form-group">
+                @Html.LabelFor(model => model.MilkType, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.DropDownListFor(model => model.MilkType, Enum.GetNames(typeof(DairyManagement.Models.Enums.CustomerMilkType)).Select(e => new SelectListItem() { Text = e }),
+      new { @class = "form-control" })
+                    @Html.ValidationMessageFor(model => model.CustomerId, "", new { @class = "text-danger" })
+                </div>
             </div>
-        </div>
-    }
-</div>
+
+            <div class="form-group">
+                @Html.LabelFor(model => model.MilkGiven, htmlAttributes: new { @class = "control-label col-md-2" })
+                <div class="col-md-3">
+                    @Html.EditorFor(model => model.MilkGiven, new { htmlAttributes = new { @class = "form-control" } })
+                    @Html.ValidationMessageFor(model => model.MilkGiven, "", new { @class = "text-danger" })
+                </div>
+            </div>
+
+            <div class="form-group">
+                <div class="col-md-offset-2 col-md-10">
+                    <input type="submit" value="Create" class="btn btn-default" />
+                    <a href="/EmployeeToCustomerMilk" class="btn btn-default">Back To List</a>
+                </div>
+            </div>
+        }
+    </div>
 }
 
 @section scripts{
@@ -66,5 +79,18 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"></script>
     <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
     <script src="~/Scripts/util.js"></script>
+    @*<script src="~/Scripts/jquery.datetimepicker.js"></script>*@
+    <script src="~/Scripts/jquery.datetimepicker.full.js"></script>
     <script src="~/Scripts/PageScripts/EmployeeToMilkCustomer.js"></script>
+
+    <script>
+        //$('.datetimepicker').datetimepicker({
+        //    dayOfWeekStart: 1,
+        //    lang: 'en',
+        //    disabledDates: ['1986/01/08', '1986/01/09', '1986/01/10'],
+        //    startDate: '1986/01/05'
+        //});
+        $('.datetimepicker').datetimepicker();
+
+    </script>
 }
