--- a/DairyManagement/Views/VendorMilk/Delete.cshtml
+++ b/DairyManagement/Views/VendorMilk/Delete.cshtml
@@ -91,6 +91,14 @@
         <dd>
             @Html.DisplayFor(model => model.UpdatedDate)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.MoneyPaid)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MoneyPaid)
+        </dd>
     </dl>
 
     @using (Html.BeginForm()) {
