--- a/DairyManagement/Views/VendorMilk/Details.cshtml
+++ b/DairyManagement/Views/VendorMilk/Details.cshtml
@@ -90,6 +90,14 @@
         <dd>
             @Html.DisplayFor(model => model.UpdatedDate)
         </dd>
+
+        <dt>
+            @Html.DisplayNameFor(model => model.MoneyPaid)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.MoneyPaid)
+        </dd>
     </dl>
 </div>
 <p>
